--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <!-- Add an html input tag-->
 <input type="text" [(ngModel)]="name"> <!-- ngModel is a FormsModule feature-->
 <p>{{ name }}</p> <!-- when the input in the text field is changed, the output is changed, as well.-->
+<h3>I'm in the AppComponent!</h3>
