added the app-server selector to app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,6 @@
 <input type="text" [(ngModel)]="name"> <!-- ngModel is a FormsModule feature-->
 <p>{{ name }}</p> <!-- when the input in the text field is changed, the output is changed, as well.-->
 <h3>I'm in the AppComponent! </h3>
+<hr>
+<!-- This is the app-server selector identified in the Component Decorator in theserver.component.ts file. -->
+<app-server></app-server>
