added a 'servers' component using the CLI and nested it in the ServerComponent template.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 <p>{{ name }}</p> <!-- when the input in the text field is changed, the output is changed, as well.-->
 <h3>I'm in the AppComponent! </h3>
 <hr>
-<!-- This is the app-server selector identified in the Component Decorator in theserver.component.ts file. -->
-<app-server></app-server>
+<!-- This is the app-servers selector identified in the Component Decorator in the servers.component.ts file. -->
+<app-servers></app-servers>
