--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
+<div class="container">
+   <div class="row">
+      <div class="col-xs-12">
+         <h3>I'm in the AppComponent! </h3>
+         <hr>
+         <!-- This is the app-servers selector identified in the Component Decorator in the servers.component.ts file. -->
+         <!-- <app-servers></app-servers> -->
+         <!-- <div app-servers></div> -->
+         <div class="app-servers"> </div>
+      </div>
+   </div>
+</div>
 
-<input type="text" [(ngModel)]="name"> <!-- ngModel is a FormsModule feature-->
-<p>{{ name }}</p> <!-- when the input in the text field is changed, the output is changed, as well.-->
-<h3>I'm in the AppComponent! </h3>
-<hr>
-<!-- This is the app-servers selector identified in the Component Decorator in the servers.component.ts file. -->
-<app-servers></app-servers>
